--- a/site/careers.html
+++ b/site/careers.html
@@ -88,7 +88,7 @@
                         <h2>Our offers</h2>
                         <p>We offering awesome facts</p>
                     </div>
-                    <ul class="offers">
+                    <ul class="service-content">
                         <li>
                             <i class="fa fa-smile-o" aria-hidden="true"></i>
                             <h4>Fun environment</h4>
