home page is complete

--- a/site/index.html
+++ b/site/index.html
@@ -246,6 +246,45 @@
                     <p>From Our Blog</p>
                 </div>
                 <div class="col-xs-12">
+                    <div class="row">
+                        <div class="col-xs-12 col-lg-6">
+                            <div class="home-news-content">
+                                <ul>
+                                    <li>
+                                        <p><span class="text-uppercase">30</span>Oct-2015</p>
+                                    </li>
+                                    <li>
+                                        <p><i class="fa fa-comment-o" aria-hidden="true"></i>8- Com</p>
+                                    </li>
+                                    <li>
+                                        <p><i class="fa fa-eye" aria-hidden="true"></i>16- View</p>
+                                    </li>
+                                </ul>
+                                <div>
+                                    <img src="img/home/layer-10.png" alt="news-image">
+                                    <h4 class="text-uppercase">Blog Heading</h4>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy...</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-lg-6">
+                            <div class="home-news-content">
+                                <div>
+                                    <h4 class="text-uppercase">Blog Heading</h4>
+                                    <span class="text-uppercase">30 - Oct - 2015</span>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy...</p>
+                                </div>
+                                <div>
+                                    <h4 class="text-uppercase">Blog Heading</h4>
+                                    <span class="text-uppercase">1 - Nov - 2015</span>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled...</p>
+                                    <button type="button" class="button-general">View more</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
 
 
                 </div>
