home page section news is complete

--- a/site/index.html
+++ b/site/index.html
@@ -260,7 +260,7 @@
                                         <p><i class="fa fa-eye" aria-hidden="true"></i>16- View</p>
                                     </li>
                                 </ul>
-                                <div>
+                                <div class="home-news-content-image">
                                     <img src="img/home/layer-10.png" alt="news-image">
                                     <h4 class="text-uppercase">Blog Heading</h4>
                                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy...</p>
@@ -269,12 +269,12 @@
                         </div>
                         <div class="col-xs-12 col-lg-6">
                             <div class="home-news-content">
-                                <div>
+                                <div class="home-partners-content-no-image">
                                     <h4 class="text-uppercase">Blog Heading</h4>
                                     <span class="text-uppercase">30 - Oct - 2015</span>
                                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy...</p>
                                 </div>
-                                <div>
+                                <div class="home-partners-content-no-image">
                                     <h4 class="text-uppercase">Blog Heading</h4>
                                     <span class="text-uppercase">1 - Nov - 2015</span>
                                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled...</p>
@@ -283,13 +283,7 @@
                             </div>
                         </div>
                     </div>
-
-
-
-
                 </div>
-
-
             </div>
         </div>
     </section>
