--- a/site/contact.html
+++ b/site/contact.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Contact</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="libs/bootstrap/css/bootstrap-flex.css">
-    <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap-flex.min.css">
+    <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.min.css">
 
 </head>
@@ -17,7 +17,7 @@
             <div class="row">
                 <div class="col-xs-12">
                     <div class="navbar header-navigation">
-                        <a href="" class="navbar-brand header-logo">
+                        <a href="index.html" class="navbar-brand header-logo">
                             <img src="img/businessplus-logo.png" alt="businessplus">
                         </a>
                         <a href="tel:+99788856999" class="phone">
@@ -26,7 +26,7 @@
                         <nav>
                             <ul class="nav navbar-nav">
                                 <li class="nav-item">
-                                    <a href="#">Home</a>
+                                    <a href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="about.html">About us</a>
@@ -35,7 +35,7 @@
                                     <a href="#">services</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#">news</a>
+                                    <a href="news.html">news</a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="blog.html">blog</a>
