--- a/site/about.html
+++ b/site/about.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>About</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="libs/bootstrap/css/bootstrap-flex.css">
-    <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap-flex.min.css">
+    <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.min.css">
 
 </head>
@@ -17,7 +17,7 @@
             <div class="row">
                 <div class="col-xs-12">
                     <div class="navbar header-navigation">
-                        <a href="" class="navbar-brand header-logo">
+                        <a href="index.html" class="navbar-brand header-logo">
                             <img src="img/businessplus-logo.png" alt="businessplus">
                         </a>
                         <a href="tel:+99788856999" class="phone">
@@ -26,7 +26,7 @@
                         <nav>
                             <ul class="nav navbar-nav">
                                 <li class="nav-item">
-                                    <a href="#">Home</a>
+                                    <a href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item active-page">
                                     <a href="about.html">About us</a>
@@ -35,7 +35,7 @@
                                     <a href="#">services</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#">news</a>
+                                    <a href="news.html">news</a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="blog.html">blog</a>
@@ -117,75 +117,65 @@
                         <h2>Clients</h2>
                         <p>Our Great Clients</p>
                     </div>
-                    <div class="clients">
-                        <ul class="list-group clients-block">
-                            <li>
-                                <a href="#">
-                                    <img src="img/about/clients/vector-smart-object-1.png" alt="1">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <img src="img/about/clients/vector-smart-object-2.png" alt="2">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <img src="img/about/clients/vector-smart-object-3.png" alt="3">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <img src="img/about/clients/vector-smart-object-4.png" alt="4">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <img src="img/about/clients/vector-smart-object-5.png" alt="5">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <img src="img/about/clients/vector-smart-object-6.png" alt="6">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <img src="img/about/clients/vector-smart-object-7.png" alt="7">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <img src="img/about/clients/vector-smart-object-8.png" alt="8">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <img src="img/about/clients/vector-smart-object-9.png" alt="9">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <img src="img/about/clients/vector-smart-object-10.png" alt="10">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <img src="img/about/clients/vector-smart-object-11.png" alt="11">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <img src="img/about/clients/vector-smart-object-12.png" alt="12">
-                                </a>
-                            </li>
-                        </ul>
-                        <ul class="nav nav-inline clients-navigation">
-                            <li class="nav-item"><a href="#" class="nav-link active-list-clients"></a></li>
-                            <li class="nav-item"><a href="#" class="nav-link"></a></li>
-                            <li class="nav-item"><a href="#" class="nav-link"></a></li>
-                        </ul>
+
+                    <div id="carousel-partners" class="carousel slide slider-box" data-ride="carousel" data-interval="6000" data-pause="hover">
+                        <div class="carousel-inner slider-box-content" role="listbox">
+                            <div class="carousel-item active">
+                                <ul class="about-partners-content">
+                                    <li><img src="img/about/clients/vector-smart-object-1.png" alt="client"></li>
+                                    <li><img src="img/about/clients/vector-smart-object-2.png" alt="client"></li>
+                                    <li><img src="img/about/clients/vector-smart-object-3.png" alt="client"></li>
+                                    <li><img src="img/about/clients/vector-smart-object-4.png" alt="client"></li>
+                                    <li><img src="img/about/clients/vector-smart-object-5.png" alt="client"></li>
+                                    <li><img src="img/about/clients/vector-smart-object-6.png" alt="client"></li>
+                                    <li><img src="img/about/clients/vector-smart-object-7.png" alt="client"></li>
+                                    <li><img src="img/about/clients/vector-smart-object-8.png" alt="client"></li>
+                                    <li><img src="img/about/clients/vector-smart-object-9.png" alt="client"></li>
+                                    <li><img src="img/about/clients/vector-smart-object-10.png" alt="client"></li>
+                                    <li><img src="img/about/clients/vector-smart-object-11.png" alt="client"></li>
+                                    <li><img src="img/about/clients/vector-smart-object-12.png" alt="client"></li>
+                                </ul>
+                            </div>
+                            <div class="carousel-item">
+                                <ul class="about-partners-content">
+                                    <li><img src="img/about/clients/vector-smart-object-1.png" alt="client"></li>
+                                    <li><img src="img/about/clients/vector-smart-object-2.png" alt="client"></li>
+                                    <li><img src="img/about/clients/vector-smart-object-3.png" alt="client"></li>
+                                    <li><img src="img/about/clients/vector-smart-object-4.png" alt="client"></li>
+                                    <li><img src="img/about/clients/vector-smart-object-5.png" alt="client"></li>
+                                    <li><img src="img/about/clients/vector-smart-object-6.png" alt="client"></li>
+                                    <li><img src="img/about/clients/vector-smart-object-7.png" alt="client"></li>
+                                    <li><img src="img/about/clients/vector-smart-object-8.png" alt="client"></li>
+                                    <li><img src="img/about/clients/vector-smart-object-9.png" alt="client"></li>
+                                    <li><img src="img/about/clients/vector-smart-object-10.png" alt="client"></li>
+                                    <li><img src="img/about/clients/vector-smart-object-11.png" alt="client"></li>
+                                    <li><img src="img/about/clients/vector-smart-object-12.png" alt="client"></li>
+                                </ul>
+                            </div>
+                            <div class="carousel-item">
+                                <ul class="about-partners-content">
+                                    <li><img src="img/about/clients/vector-smart-object-1.png" alt="client"></li>
+                                    <li><img src="img/about/clients/vector-smart-object-2.png" alt="client"></li>
+                                    <li><img src="img/about/clients/vector-smart-object-3.png" alt="client"></li>
+                                    <li><img src="img/about/clients/vector-smart-object-4.png" alt="client"></li>
+                                    <li><img src="img/about/clients/vector-smart-object-5.png" alt="client"></li>
+                                    <li><img src="img/about/clients/vector-smart-object-6.png" alt="client"></li>
+                                    <li><img src="img/about/clients/vector-smart-object-7.png" alt="client"></li>
+                                    <li><img src="img/about/clients/vector-smart-object-8.png" alt="client"></li>
+                                    <li><img src="img/about/clients/vector-smart-object-9.png" alt="client"></li>
+                                    <li><img src="img/about/clients/vector-smart-object-10.png" alt="client"></li>
+                                    <li><img src="img/about/clients/vector-smart-object-11.png" alt="client"></li>
+                                    <li><img src="img/about/clients/vector-smart-object-12.png" alt="client"></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <ol class="carousel-indicators slider-box-list">
+                            <li data-target="#carousel-partners" data-slide-to="0" class="active"></li>
+                            <li data-target="#carousel-partners" data-slide-to="1"></li>
+                            <li data-target="#carousel-partners" data-slide-to="2"></li>
+                        </ol>
                     </div>
+
 
                 </div>
             </div>
