--- a/site/index.html
+++ b/site/index.html
@@ -35,7 +35,7 @@
                                     <a href="#">services</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#">news</a>
+                                    <a href="news.html">news</a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="blog.html">blog</a>
