--- a/site/news.html
+++ b/site/news.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Careers</title>
+    <title>News</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="libs/bootstrap/css/bootstrap-flex.css">
-    <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap-flex.min.css">
+    <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.min.css">
 
 </head>
@@ -17,7 +17,7 @@
             <div class="row">
                 <div class="col-xs-12">
                     <div class="navbar header-navigation">
-                        <a href="" class="navbar-brand header-logo">
+                        <a href="index.html" class="navbar-brand header-logo">
                             <img src="img/businessplus-logo.png" alt="businessplus">
                         </a>
                         <a href="tel:+99788856999" class="phone">
@@ -26,7 +26,7 @@
                         <nav>
                             <ul class="nav navbar-nav">
                                 <li class="nav-item">
-                                    <a href="#">Home</a>
+                                    <a href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="about.html">About us</a>
