--- a/site/blog-post.html
+++ b/site/blog-post.html
@@ -32,7 +32,7 @@
                                     <a href="about.html">About us</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#">services</a>
+                                    <a href="services.html">services</a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="news.html">news</a>
@@ -55,8 +55,8 @@
     </header>
     <!-- banner -->
     <section class="banner-section">
-    <img src="img/layer-19.png" alt="banner">
-</section>
+        <img src="img/layer-19.png" alt="banner">
+    </section>
     <!-- blog post -->
     <section class="blog-section">
         <div class="container">
