--- a/site/blog.html
+++ b/site/blog.html
@@ -32,7 +32,7 @@
                                     <a href="about.html">About us</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#">services</a>
+                                    <a href="services.html">services</a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="news.html">news</a>
