--- a/site/services.html
+++ b/site/services.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Careers</title>
+    <title>News</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap-flex.min.css">
     <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">
@@ -25,13 +25,13 @@
                         </a>
                         <nav>
                             <ul class="nav navbar-nav">
-                                <li class="nav-item active-page">
+                                <li class="nav-item">
                                     <a href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="about.html">About us</a>
                                 </li>
-                                <li class="nav-item">
+                                <li class="nav-item active-page">
                                     <a href="services.html">services</a>
                                 </li>
                                 <li class="nav-item">
@@ -53,105 +53,76 @@
             </div>
         </div>
     </header>
-    <!-- banner-slider -->
-    <section class="banner-slider">
-        <div id="home-banner-carousel" class="carousel slide slider-home" data-ride="carousel" data-interval="6000">
-            <ol class="carousel-indicators slider-home-list">
-                <li data-target="#home-banner-carousel" data-slide-to="0" class="active"></li>
-                <li data-target="#home-banner-carousel" data-slide-to="1"></li>
-                <li data-target="#home-banner-carousel" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner slider-home-image" role="listbox">
-                <div class="carousel-item active">
-                    <img src="img/home/health-spending-account-small-business.jpg" alt="First slide">
-                    <div class="container">
-                        <div class="slider-info slider-info-right">
-                            <span class="text-uppercase">Welcome to</span>
-                            <h2 class="text-uppercase">Business plus</h2>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry Lorem Ipsum has been the industry's standard dummy text ever.</p>
-                            <button type="button" class="button-requirements">Read More</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="img/home/business-administration-degree-programs.jpg" alt="Second slide">
-                    <div class="container">
-                        <div class="slider-info slider-info-left">
-                            <span class="text-uppercase">Welcome to</span>
-                            <h2 class="text-uppercase">Business plus</h2>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry Lorem Ipsum has been the industry's standard dummy text ever.</p>
-                            <button type="button" class="button-requirements">Read More</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="img/home/business-people-around-computer-1.jpg" alt="Third slide">
-                    <div class="container">
-                        <div class="slider-info slider-info-left">
-                            <span class="text-uppercase">Welcome to</span>
-                            <h2 class="text-uppercase">Business plus</h2>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry Lorem Ipsum has been the industry's standard dummy text ever.</p>
-                            <button type="button" class="button-requirements">Read More</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <!-- banner -->
+    <section class="banner-section">
+        <img src="img/services/layer-16.png" alt="banner">
     </section>
-    <!-- home-about -->
-    <section class="home-about">
+    <!-- services -->
+    <section class="service-section">
         <div class="container">
             <div class="row">
-                <div class="col-xs-12 col-lg-5 title-text">
-                    <h2>About us</h2>
-                    <p>Our Short Story</p>
-                </div>
-                <div class="col-xs-12 col-lg-7 home-about-info">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                    <a href="about.html" class="button-general">read more</a>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- home service -->
-    <section class="home-service">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 title-text">
-                    <h2>Services</h2>
-                    <p>What we are doing</p>
+                <div class="col-xs-12">
+                    <div class="title-text">
+                        <h2>Service</h2>
+                        <p>Our Products</p>
+                    </div>
                 </div>
                 <div class="col-xs-12">
-                    <ul class="service-content">
-                        <li>
-                            <i class="fa fa-rocket" aria-hidden="true"></i>
-                            <h4>Boosting your business</h4>
-                            <p>Lorem Ipsum is simply dummy text of the printing and industry Lorem Ipsum has been the industry's standard dummy text.</p>
-                        </li>
-                        <li>
-                            <i class="fa fa-envelope-o" aria-hidden="true"></i>
-                            <h4>Online support</h4>
-                            <p>Lorem Ipsum is simply dummy text of the printing and industry Lorem Ipsum has been the industry's standard dummy text.</p>
-                        </li>
-                        <li>
-                            <i class="fa fa-hand-o-right" aria-hidden="true"></i>
-                            <h4>analyzing business strategy</h4>
-                            <p>Lorem Ipsum is simply dummy text of the printing and industry Lorem Ipsum has been the industry's standard dummy text.</p>
-                        </li>
-                        <li>
-                            <i class="fa fa-clock-o" aria-hidden="true"></i>
-                            <h4>Time managment</h4>
-                            <p>Lorem Ipsum is simply dummy text of the printing and industry Lorem Ipsum has been the industry's standard dummy text.</p>
-                        </li>
-                    </ul>
-                    <button type="button" class="button-general">View more</button>
+                    <div class="service-section-content service-section-content-left">
+                        <i class="fa fa-rocket active-icon" aria-hidden="true"></i>
+                        <h4 class="text-uppercase">Boosting your business</h4>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum.</p>
+                        <button type="button" class="button-general">Contact Us</button>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- home clients -->
+    <section class="service-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="service-section-content service-section-content-right">
+                        <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                        <h4 class="text-uppercase">Online support</h4>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum.</p>
+                        <button type="button" class="button-general">Contact Us</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="service-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="service-section-content service-section-content-left">
+                        <i class="fa fa-hand-o-right" aria-hidden="true"></i>
+                        <h4 class="text-uppercase">analyzing business strategy</h4>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum.</p>
+                        <button type="button" class="button-general">Contact Us</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="service-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="service-section-content service-section-content-right">
+                        <i class="fa fa-clock-o" aria-hidden="true"></i>
+                        <h4 class="text-uppercase">Time managment</h4>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum.</p>
+                        <button type="button" class="button-general">Contact Us</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- clients -->
     <section class="our-clients">
-        <div class="container pyramid pyramid-right">
+        <div class="container">
             <div class="row">
                 <div class="col-xs-12 title-text">
                     <h2>Clients</h2>
@@ -237,108 +208,6 @@
             </div>
         </div>
     </section>
-    <!-- home news -->
-    <section class="home-news">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 title-text">
-                    <h2>News</h2>
-                    <p>From Our Blog</p>
-                </div>
-                <div class="col-xs-12">
-                    <div class="row">
-                        <div class="col-xs-12 col-lg-6">
-                            <div class="home-news-content">
-                                <ul>
-                                    <li>
-                                        <p><span class="text-uppercase">30</span>Oct-2015</p>
-                                    </li>
-                                    <li>
-                                        <p><i class="fa fa-comment-o" aria-hidden="true"></i>8- Com</p>
-                                    </li>
-                                    <li>
-                                        <p><i class="fa fa-eye" aria-hidden="true"></i>16- View</p>
-                                    </li>
-                                </ul>
-                                <div class="home-news-content-image">
-                                    <img src="img/home/layer-10.png" alt="news-image">
-                                    <h4 class="text-uppercase">Blog Heading</h4>
-                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy...</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xs-12 col-lg-6">
-                            <div class="home-news-content">
-                                <div class="home-partners-content-no-image">
-                                    <h4 class="text-uppercase">Blog Heading</h4>
-                                    <span class="text-uppercase">30 - Oct - 2015</span>
-                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy...</p>
-                                </div>
-                                <div class="home-partners-content-no-image">
-                                    <h4 class="text-uppercase">Blog Heading</h4>
-                                    <span class="text-uppercase">1 - Nov - 2015</span>
-                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled...</p>
-                                    <button type="button" class="button-general">View more</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- home clients -->
-    <section class="home-partners">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 title-text">
-                    <h2>Partners</h2>
-                    <p>Our Great Partners</p>
-                </div>
-                <div class="col-xs-12">
-                    <div id="carousel-partners" class="carousel slide slider-box" data-ride="carousel" data-interval="6000" data-pause="hover">
-                        <div class="carousel-inner slider-box-content" role="listbox">
-                            <div class="carousel-item active">
-                                <ul class="home-partners-content">
-                                    <li><img src="img/home/partners/vector-smart-object1.png" alt="client"></li>
-                                    <li><img src="img/home/partners/vector-smart-object2.png" alt="client"></li>
-                                    <li><img src="img/home/partners/vector-smart-object3.png" alt="client"></li>
-                                    <li><img src="img/home/partners/vector-smart-object4.png" alt="client"></li>
-                                    <li><img src="img/home/partners/vector-smart-object5.png" alt="client"></li>
-                                    <li><img src="img/home/partners/vector-smart-object6.png" alt="client"></li>
-                                </ul>
-                            </div>
-                            <div class="carousel-item">
-                                <ul class="home-partners-content">
-                                    <li><img src="img/home/partners/vector-smart-object1.png" alt="client"></li>
-                                    <li><img src="img/home/partners/vector-smart-object2.png" alt="client"></li>
-                                    <li><img src="img/home/partners/vector-smart-object3.png" alt="client"></li>
-                                    <li><img src="img/home/partners/vector-smart-object4.png" alt="client"></li>
-                                    <li><img src="img/home/partners/vector-smart-object5.png" alt="client"></li>
-                                    <li><img src="img/home/partners/vector-smart-object6.png" alt="client"></li>
-                                </ul>
-                            </div>
-                            <div class="carousel-item">
-                                <ul class="home-partners-content">
-                                    <li><img src="img/home/partners/vector-smart-object1.png" alt="client"></li>
-                                    <li><img src="img/home/partners/vector-smart-object2.png" alt="client"></li>
-                                    <li><img src="img/home/partners/vector-smart-object3.png" alt="client"></li>
-                                    <li><img src="img/home/partners/vector-smart-object4.png" alt="client"></li>
-                                    <li><img src="img/home/partners/vector-smart-object5.png" alt="client"></li>
-                                    <li><img src="img/home/partners/vector-smart-object6.png" alt="client"></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <ol class="carousel-indicators slider-box-list">
-                            <li data-target="#carousel-partners" data-slide-to="0" class="active"></li>
-                            <li data-target="#carousel-partners" data-slide-to="1"></li>
-                            <li data-target="#carousel-partners" data-slide-to="2"></li>
-                        </ol>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
     <!-- footer -->
     <footer class="footer-main">
         <div class="container pyramid pyramid-right">
@@ -367,7 +236,7 @@
                     <p class="h3 footer-nav">Navigation</p>
                     <ul class="list-unstyled list-navigation">
                         <li>
-                            <a href="index.html">Home</a>
+                            <a href="#">Home</a>
                         </li>
                         <li>
                             <a href="about.html">About us</a>
