add 2 page error & testimonial

--- a/site/index.html
+++ b/site/index.html
@@ -144,7 +144,7 @@
                             <p>Lorem Ipsum is simply dummy text of the printing and industry Lorem Ipsum has been the industry's standard dummy text.</p>
                         </li>
                     </ul>
-                    <button type="button" class="button-general">View more</button>
+                    <a href="services.html" class="button-general">View more</a>
                 </div>
             </div>
         </div>
@@ -183,7 +183,7 @@
                                 </ul>
                             </div>
                             <div class="carousel-item">
-                                <ul class="home-clients-comment">
+                                <ul class="our-clients-comment">
                                     <li>
                                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown.</p>
                                         <img src="img/home/layer-5.png" alt="image">
@@ -205,7 +205,7 @@
                                 </ul>
                             </div>
                             <div class="carousel-item">
-                                <ul class="home-clients-comment">
+                                <ul class="our-clients-comment">
                                     <li>
                                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown.</p>
                                         <img src="img/home/layer-5.png" alt="image">
@@ -278,7 +278,7 @@
                                     <h4 class="text-uppercase">Blog Heading</h4>
                                     <span class="text-uppercase">1 - Nov - 2015</span>
                                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled...</p>
-                                    <button type="button" class="button-general">View more</button>
+                                    <a href="news.html" class="button-general">View more</a>
                                 </div>
                             </div>
                         </div>
