--- a/site/services.html
+++ b/site/services.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>News</title>
+    <title>Service</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap-flex.min.css">
     <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">
@@ -154,7 +154,7 @@
                                 </ul>
                             </div>
                             <div class="carousel-item">
-                                <ul class="home-clients-comment">
+                                <ul class="our-clients-comment">
                                     <li>
                                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown.</p>
                                         <img src="img/home/layer-5.png" alt="image">
@@ -176,7 +176,7 @@
                                 </ul>
                             </div>
                             <div class="carousel-item">
-                                <ul class="home-clients-comment">
+                                <ul class="our-clients-comment">
                                     <li>
                                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown.</p>
                                         <img src="img/home/layer-5.png" alt="image">
