--- a/site/shortcode.html
+++ b/site/shortcode.html
@@ -111,13 +111,13 @@
                                     </li>
                                 </ul>
                                 <div class="tab-content tabs-content">
-                                    <div class="tab-pane active" id="tab-one" role="tabpanel">
+                                    <div class="tab-pane fade in active" id="tab-one" role="tabpanel">
                                         <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors.</p>
                                     </div>
-                                    <div class="tab-pane" id="tab-two" role="tabpanel">
+                                    <div class="tab-pane fade" id="tab-two" role="tabpanel">
                                         <p>2 It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors.</p>
                                     </div>
-                                    <div class="tab-pane" id="tab-three" role="tabpanel">
+                                    <div class="tab-pane fade" id="tab-three" role="tabpanel">
                                         <p>3 It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors.</p>
                                     </div>
                                 </div>
